<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_neutral_variant10"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/logincreateaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/loginbutton"
        app:layout_constraintTop_toBottomOf="@+id/loginbutton" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="235dp"
        android:layout_height="50dp"
        android:layout_marginTop="7dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/loginpassword"
        app:layout_constraintStart_toStartOf="@+id/loginpassword"
        app:layout_constraintTop_toBottomOf="@+id/loginpassword" />

    <EditText
        android:id="@+id/loginpassword"
        android:layout_width="235dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/background_views"
        android:ems="10"
        android:hint="@string/enter_passwords"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/logingmail"
        app:layout_constraintStart_toStartOf="@+id/logingmail"
        app:layout_constraintTop_toBottomOf="@+id/logingmail" />

    <EditText
        android:id="@+id/logingmail"
        android:layout_width="235dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_views"
        android:ems="10"
        android:hint="@string/enter_gmails"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amarante"
        android:text="@string/people_connect"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.415" />

    <ProgressBar
        android:id="@+id/loginprogressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/loginpassword"
        app:layout_constraintStart_toStartOf="@+id/loginpassword"
        app:layout_constraintTop_toBottomOf="@+id/loginpassword" />
</androidx.constraintlayout.widget.ConstraintLayout>